# ESP32-S3-4-Mic-UAC-Array-Sound-Localization

./: .gitignore  CMakeLists.txt  README_20260531_030316_193.md  README_20260531_125256_320.md  partitions.csv  readme.md  sdkconfig.old
main/: CMakeLists.txt  afe_processor.c  afe_processor.h  i2s_mic_driver.c  i2s_mic_driver.h  idf_component.yml  main.c  mic_array_config.h  tusb_config.h  usb_composite.c  usb_composite.h  walle_audio_desc.h
